--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@aws-amplify/ui-vue": "^4.3.3",
     "@syncfusion/ej2-base": "^28.1.33",
     "@syncfusion/ej2-vue-buttons": "^28.1.39",
     "@syncfusion/ej2-vue-calendars": "^28.2.11",
@@ -18,7 +19,7 @@
     "@syncfusion/ej2-vue-popups": "^28.1.39",
     "@syncfusion/ej2-vue-splitbuttons": "^28.1.37",
     "@vuepic/vue-datepicker": "^11.0.1",
-    "aws-amplify": "^6.12.3",
+    "aws-amplify": "^6.15.0",
     "aws-sdk": "^2.1692.0",
     "core-js": "^3.8.3",
     "vue": "^3.5.13",
