--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@aws-amplify/ui-vue": "^4.3.3",
+    "@aws-sdk/client-dynamodb": "^3.828.0",
+    "@aws-sdk/util-dynamodb": "^3.828.0",
     "@syncfusion/ej2-base": "^28.1.33",
     "@syncfusion/ej2-vue-buttons": "^28.1.39",
     "@syncfusion/ej2-vue-calendars": "^28.2.11",
@@ -20,7 +22,6 @@
     "@syncfusion/ej2-vue-splitbuttons": "^28.1.37",
     "@vuepic/vue-datepicker": "^11.0.1",
     "aws-amplify": "^6.15.0",
-    "aws-sdk": "^2.1692.0",
     "core-js": "^3.8.3",
     "vue": "^3.5.13",
     "vue-multiselect": "^3.2.0",
